GNOME Bugzilla – Bug 761651
[Wayland] glade previewer is resizing windows until it crashes gnome-shell
Last modified: 2016-04-26 09:01:11 UTC
Steps to reproduce: 1. open glade on a gnome+wayland session 2. build some ui 3. preview UI 4. focus ui by clicking on window header or GtkHeaderBar What happens: Window is constantly increasing its width and height until it crashes and takes gnome-shell with it. What should happen: No reason to resize window, so don't resize window There might be other issues with glade too, but this is pretty obvious and most users should be running into it. For detailed backtraces see downstream bug report https://bugzilla.redhat.com/show_bug.cgi?id=1277723
I'm marking this bug as critical since according to [1] https://wiki.gnome.org/Initiatives/Wayland/Applications this should not be present and the wayland port is gaining more attention. It's not far from being "as important as X". [1] https://wiki.gnome.org/Initiatives/Wayland/Applications I'm running these software versions, on Fedora 23: glade-3.19.0-3.fc23 gtk3-3.18.7-1.fc23 glib2-2.46.2-1.fc23 (In reply to Christian Stadelmann from comment #0) > There might be other issues with glade too, but this is pretty obvious and > most users should be running into it. I meant: There might be other issues with glade on wayland, …
Matthias pointed out this bug to me some time ago, but it escaped my radar for some reason, sorry :( The problem occurs because glade-previewer places a the previewed gtkwindow inside a gtkwindow, and the shadows update of the inner child gtkwindow will cause this infinite growth. I have some sort of a fix to avoid that, trying to polish it a bit...
Created attachment 325542 [details] [review] [PATCH] wayland: do not update shadows for child windows This is a first try, it fixes the issue but there are some rendering issues now.
=> Moving to gtk+
Created attachment 325583 [details] Simple reproducer for testing purpose.
Good thing is this doesn't seem top be a regression caused by my CSD window size patches in 3.20 (for once!) because the exact same occurs with gtk+-3.18...
Created attachment 325585 [details] [review] [PATCH] wayland: do not update shadows for child windows This patch fixes the "resize of death" issue and the shadow glitches. Not entirely sure if it could have nasty side effects though...
Review of attachment 325585 [details] [review]: Updating the opaque region should also be strictly toplevel-only, maybe ?
(In reply to Matthias Clasen from comment #8) > Review of attachment 325585 [details] [review] [review]: > > Updating the opaque region should also be strictly toplevel-only, maybe ? Yes, it is, because of the return above :) Now, if not a toplevel, we do nothing.
Review of attachment 325585 [details] [review]: Ah, I totally misread the patch. Lets commit this to master now - if nobody screams, I'll cherry pick it for 3.20
Comment on attachment 325585 [details] [review] [PATCH] wayland: do not update shadows for child windows attachment 325585 [details] [review] pushed to git *master* as commit 83e7751 - wayland: do not update shadows for child windows
(In reply to Matthias Clasen from comment #10) > [...] Lets commit this to master now - if nobody screams, I'll cherry pick > it for 3.20 Done, leaving the bug opened until we are sure the fix is harmless and we can get it in 3.20 as well.
Matthias, do you think we could add this patch to the branch gtk-3.20 now? Been a couple of weeks now, and I did not hear back from it in master.
sure, lets do it
Thanks, closing then (I see you cherry-picked it in branch gtk-3-20 as commit 115af7c)